--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -8,6 +8,11 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<!-- <ion-header>
+    <ion-toolbar color="success">
+        <ion-title>Login</ion-title>
+    </ion-toolbar>
+</ion-header> -->
 
 <ion-content>
     <ion-card class="welcome-card">
