--- a/src/app/toc/toc.page.html
+++ b/src/app/toc/toc.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>toc</ion-title>
+  <ion-toolbar color="success">
+    <ion-title>TOC</ion-title>
   </ion-toolbar>
 </ion-header>
 
